tests/cases/compiler-development/artifact/errors/diagnostic-ownership-temporary-element-move.diagnostic
diagnostic error code=O0001 family=ownership message="moving owning aggregate elements out of temporary values is not supported; bind the aggregate first" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-ownership-temporary-element-move.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-ownership-temporary-element-move.ari" bytes=154
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-ownership-temporary-element-move.ari" line=6 column=45 end_line=6 end_column=46 byte_start=121 byte_end=122 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-ownership-temporary-element-move.ari:6:45\n   |\n 6 |   let token = [make_owned(1), make_owned(2)][0];\n   |                                             ^"
  Note index=0 location=none message="temporary aggregate values do not have a tracked owner path for recording a partial element move"
  Help index=0 location=none message="bind the aggregate to a local first, then move an element with a constant index or move the whole aggregate"
